# tcmalloc-better

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz-sys.yml  release-plz.yml
bazel-log-parser/: Cargo.toml
bazel-log-parser/src/: main.rs
libtcmalloc-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
libtcmalloc-sys/bazel-log-parser/: Cargo.toml
libtcmalloc-sys/bazel-log-parser/src/: main.rs
libtcmalloc-sys/c_src/: malloc_bridge.cc  malloc_extension_bridge.cc
libtcmalloc-sys/patches/: madv_hugepage.patch
libtcmalloc-sys/patches/tcmalloc/: madv_hugepage.patch
libtcmalloc-sys/src/: extension.rs  lib.rs
src/: extension.rs  lib.rs
