[package]
name = "tcmalloc-better"
version = "0.1.5"
edition = "2024"
description = "A Rust wrapper over Google's TCMalloc memory allocator"
repository = "https://github.com/maratik123/tcmalloc-better"
license = "MIT"
keywords = [
    "tcmalloc",
    "allocator",
    "memory",
    "performance"
]
categories = [
    "memory-management",
    "api-bindings"
]
readme = "README.md"
authors = [
    "Marat Bukharov <marat.buharov@gmail.com>"
]
exclude = [
    "/.idea",
    "/.github",
]

[workspace]
members = [
    "libtcmalloc-sys/bazel-log-parser",
    "libtcmalloc-sys"
]

[dependencies]
libtcmalloc-sys = { path = "libtcmalloc-sys", version = "0.1.3", default-features = false }
document-features = "0.2"

[features]
default = ["std"]
## TCMalloc extension API
extension = ["libtcmalloc-sys/extension"]
## enable std
std = []

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
