[package]
name = "libtcmalloc-sys"
version = "0.1.2"
edition = "2024"
description = "Sys crate wrapping the tcmalloc allocator"
repository = "https://github.com/maratik123/tcmalloc-better/tree/main/libtcmalloc-sys"
license = "MIT"
keywords = ["tcmalloc", "allocator", "memory", "performance"]
categories = ["memory-management", "api-bindings"]
authors = ["Marat Bukharov <marat.buharov@gmail.com>"]
exclude = [
    "/c_src/tcmalloc/ci",
    "/c_src/tcmalloc/docs",
    "/c_src/tcmalloc/tcmalloc/.github",
    "/c_src/tcmalloc/tcmalloc/testing",
    "/c_src/abseil-cpp/.github",
    "/c_src/abseil-cpp/ci",
    "/c_src/abseil-cpp/CMake",
    "/c_src/**/testdata",
    "/c_src/**/*_test.cc",
    "/c_src/**/*.cmake",
    "/c_src/**/*.py",
    "/c_src/**/*.bzl",
    "/c_src/**/*.bzlmod",
    "/c_src/**/CMakeLists.txt",
    "/c_src/**/*.bazel",
    "/c_src/**/.bazelrc",
    "/c_src/**/BUILD",
    "/c_src/**/WORKSPACE",
]
links = "tcmalloc"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[features]
extension = []

[package.metadata.docs.rs]
features = ["extension"]
